--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: Arial, sans-serif; margin: 2em; background: #f9f9f9; color: #222; }
-    .container { max-width: 600px; margin: auto; background: #fff; padding: 2em; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);}
+    .container { max-width: 700px; margin: auto; background: #fff; padding: 2em; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);}
     h1 { color: #0066cc; }
-    label { display: block; margin-top: 1em; font-weight: bold; }
-    textarea, input, select { width: 100%; padding: 0.5em; margin-top: 0.5em; border: 1px solid #ccc; border-radius: 4px; }
-    button { background: #0066cc; color: #fff; border: none; padding: 1em 2em; border-radius: 4px; font-size: 1em; margin-top: 1em; cursor: pointer;}
-    button:hover { background: #004999; }
+    .button { display: inline-block; margin: 1.5em 0; padding: 1em 2em; background: #0066cc; color: #fff; border-radius: 4px; text-decoration: none; font-size: 1.2em; transition: background 0.2s;}
+    .button:hover { background: #004999; }
+    .links { margin-top: 2em; }
+    .links a { color: #0066cc; text-decoration: none; }
+    .links a:hover { text-decoration: underline; }
     .faq { margin-top: 2em; }
     .faq h2 { font-size: 1.2em; color: #0066cc; }
     .small { font-size: 0.9em; color: #666; }
@@ -24,38 +25,11 @@
     <p>
       WikiWhistle is a grassroots platform for collecting and amplifying reports of injustice, corruption, mismanagement, and exploitation—locally and globally. Your story matters, whether it’s a massive scandal or a subtle abuse of power. Every submission helps us build a clearer picture of what’s really happening.
     </p>
-
-    <form name="wikiwhistle" method="POST" data-netlify="true">
-      <label for="narrative">Describe the injustice, corruption, or problem <span style="color:red">*</span></label>
-      <textarea id="narrative" name="narrative" rows="8" required placeholder="Describe what happened..."></textarea>
-      
-      <label for="location">General Location (optional)</label>
-      <input type="text" id="location" name="location" placeholder="City, State, Country, or 'prefer not to say'">
-
-      <label for="category">Category (select best fit, optional)</label>
-      <select id="category" name="category">
-        <option value="">Choose one</option>
-        <option value="corruption">Corruption</option>
-        <option value="abuse">Abuse of Power</option>
-        <option value="fraud">Fraud/Embezzlement</option>
-        <option value="exploitation">Exploitation</option>
-        <option value="waste">Waste/Mismanagement</option>
-        <option value="other">Other/Not Listed</option>
-      </select>
-
-      <label for="public">May we share your story on our public feed? (optional)</label>
-      <select id="public" name="public">
-        <option value="yes">Yes, it's okay to share publicly (anonymously)</option>
-        <option value="no">No, keep this private</option>
-        <option value="">No preference</option>
-      </select>
-
-      <label for="contact">Contact info (optional, only if you want follow-up; leave blank to stay anonymous)</label>
-      <input type="text" id="contact" name="contact" placeholder="Email, Signal, etc.">
-
-      <button type="submit">Submit</button>
-    </form>
-
+    <a href="submit.html" class="button">Submit a Report</a>
+    <div class="links">
+      <p><strong>Contact:</strong> <a href="mailto:Port_Huron@Proton.me">Port_Huron@Proton.me</a></p>
+      <p><strong>Podcast:</strong> <a href="https://youtube.com/@ThePortHuronStatement" target="_blank">The Port Huron Statement on YouTube</a></p>
+    </div>
     <div class="faq">
       <h2>FAQ</h2>
       <p><strong>Why submit?</strong> Every story helps. By sharing your experience, you help expose patterns, support others, and put pressure on those who abuse power.</p>
