--- a/submit.html
+++ b/submit.html
@@ -24,6 +24,9 @@
     <form name="wikiwhistle" method="POST" data-netlify="true">
       <label for="narrative">Describe the injustice, corruption, or problem <span style="color:red">*</span></label>
       <textarea id="narrative" name="narrative" rows="8" required placeholder="Describe what happened..."></textarea>
+
+      <label for="date">When did this happen? <span style="color:red">*</span></label>
+      <input type="date" id="date" name="date" required>
       
       <label for="location">General Location (optional)</label>
       <input type="text" id="location" name="location" placeholder="City, State, Country, or 'prefer not to say'">
